[package]
name = "pw-gen-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
tokio = { version = "1.12.0", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0.130", features = ["derive"] }
rand = "0.8.4"
tracing = "0.1.27"
pw-gen = "0.1.2"
